# laia-arch

./: .env.bak  .gitignore  .laia-arch  .laia-ui-link  AGENTS.md  CHANGELOG.md  CLAUDE.md  LAIA_ECOSYSTEM.md  Makefile  README.md  SECURITY.md  SOUL.md  auth.json.bak  cli.py  config.template.yaml  context_length_cache.yaml  cron  install.sh  logs  memories  sessions  toolsets.py  workspace-ui-session-areas.json
.claude/: settings.json
.laia-core/: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_v0.10.0.md  RELEASE_v0.11.0.md  RELEASE_v0.2.0.md  RELEASE_v0.3.0.md  RELEASE_v0.4.0.md  RELEASE_v0.5.0.md  RELEASE_v0.6.0.md  RELEASE_v0.7.0.md  RELEASE_v0.8.0.md  RELEASE_v0.9.0.md  SECURITY.md  SOUL.md  atlas.py  cli-config.yaml.example  cli.py  docker-compose.yml  laia  laia-already-has-routines.md  laia_constants.py  laia_logging.py  laia_paths.py  laia_state.py  laia_time.py  mcp_serve.py  mini_swe_runner.py  (+11 more)
.laia-core/laia-ui-server/frontend/src-tauri/: Cargo.toml  tauri.conf.json
archived/sprint2-agora-agents-20260516/laia-runtime/: pyproject.toml
archived/sprint2-agora-agents-20260516/laia-runtime/src/laia_agent/: agent_wrapper.py  api.py  config.py  health.py  plugin_loader.py  plugins.py  tasks.py  workspace.py
archived/sprint2-agora-agents-20260516/laia-runtime/systemd/: laia-agent-api.service
archived/sprint2-agora-agents-20260516/laia-runtime/tests/: conftest.py  test_api.py  test_plugin_loader.py  test_secret_fetch.py
services/laia-executor/: README.md  pyproject.toml
services/laia-executor/src/laia_executor/: __init__.py  __main__.py  api.py  auth.py  config.py
services/laia-executor/src/laia_executor/tools/: __init__.py  bash_tool.py  cron_tools.py  file_ops.py  private_workspace.py  process_tools.py  python_exec.py  registry.py
services/laia-executor/systemd/: laia-executor.service
services/laia-executor/tests/: conftest.py  test_api.py  test_config.py  test_cron_tools.py  test_db_locked_retry.py  test_file_ops_truncate.py  test_private_workspace.py  test_process_tools.py  test_python_exec.py
(+1885 files in other folders)
