[project]
name = "laia-runtime"
version = "0.2.0"
description = "LAIA personal container agent runtime"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
]

[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.28"]

[project.scripts]
laia-agent = "laia_agent.__main__:main"
laia-agent-api = "laia_agent.api:run"
