[package]
name = "laia-desktop"
version = "0.1.0"
description = "LAIA — Agente de IA de escritorio"
authors = []
license = ""
repository = ""
default-run = "laia-desktop"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "laia_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "laia-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
